--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           repo: "dfinance/move-tools"
-          version: "v0.9.10"
+          version: "tags/0.9.10"
           file: test-runner-linux
 
       - name: Test
