--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,14 +26,8 @@ jobs:
           version: "tags/0.9.10"
           file: test-runner-linux
 
-      - name: ls
-        run: ls -al
-
-      - name: chown
-        run: sudo chown runner ./test-runner-linux
-
-      - name: chmod
-        run: chmod +x ./test-runner-linux
+      - name: set executable permissions
+        run: sudo chown runner ./test-runner-linux && chmod +x ./test-runner-linux
 
       - name: Test
         run: ./test-runner-linux --sender 0x1 --modules ./stdlib/ --modules ./modules/ tests
