--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Fetch latest move-tools testrunner binary
+      - name: Fetch latest dove
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           repo: "dfinance/move-tools"
@@ -28,7 +28,7 @@ jobs:
           file: test-runner-linux
 
       - name: set executable permissions
-        run: sudo chown runner ./test-runner-linux && chmod +x ./test-runner-linux
+        run: sudo chown runner ./dove && chmod +x ./dove
 
       - name: Test
-        run: ./test-runner-linux --sender 0x1 --modules ./stdlib/ --modules ./modules/ tests
+        run: ./dove test
