--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,4 +34,4 @@ jobs:
         run: sudo chown runner ./dove && chmod +x ./dove
 
       - name: Test
-        run: ./dove test
+        run: ls -l && ./dove test
